--- a/src/assets/scss/client/_online-bank.scss
+++ b/src/assets/scss/client/_online-bank.scss
@@ -193,7 +193,7 @@
 			@media screen and (max-width:991px){
 				margin-bottom: 10px;
 				flex: 0 0 100%;
-				justify-content: flex-start;
+				justify-content: space-around;
 			}
 			@media screen and (max-width:767px){
 				margin-bottom: 45px;
