--- a/src/assets/scss/utils/flex-util-preset.scss
+++ b/src/assets/scss/utils/flex-util-preset.scss
@@ -119,8 +119,14 @@
 		&--100{
 			flex-basis: 100%;
 		}
+		&--95{
+			flex-basis: 95%;
+		}
 		&--90{
 			flex-basis: 90%;
+		}
+		&--85{
+			flex-basis: 85%;
 		}
 		&--80{
 			flex-basis: 80%;
@@ -134,14 +140,26 @@
 		&--66{
 			flex-basis: calc(100% * 2/3);
 		}
+		&--65{
+			flex-basis: 65%;
+		}
 		&--60{
 			flex-basis: 60%;
+		}
+		&--55{
+			flex-basis: 55%;
 		}
 		&--50{
 			flex-basis: 50%;
 		}
+		&--45{
+			flex-basis: 45%;
+		}
 		&--40{
 			flex-basis: 40%;
+		}
+		&--35{
+			flex-basis: 35%;
 		}
 		&--33{
 			flex-basis: calc(100% * 1/3);
@@ -155,8 +173,14 @@
 		&--20{
 			flex-basis: 20%;
 		}
+		&--15{
+			flex-basis: 15%;
+		}
 		&--10{
 			flex-basis: 10%;
+		}
+		&--5{
+			flex-basis: 5%;
 		}
 		&--s0{
 			flex-shrink: 0;
