--- a/src/assets/scss/base/_footer.scss
+++ b/src/assets/scss/base/_footer.scss
@@ -1,302 +1,473 @@
+// .footer {
+//    width: 100%;
+//    background: linear-gradient(274.25deg, #00205B -9.03%, #00A3E0 138.82%);
+// }
+// .footer__container{
+// 	display: grid;
+// 	padding-top: 30px;
+// 	align-items: center;
+// 	grid-template-columns: 1fr 1fr 0.8fr 1fr 1fr;
+// 	grid-template-rows: 1fr 1fr 15px 1fr;
+// 	column-gap: 2%;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-template-columns: 1fr 1fr 0.8fr 1fr;
+// 		grid-template-rows: 1fr 1fr 0.7fr 1fr 15px  1fr;
+// 	}
+// 	@media screen and (max-width: 767px) {
+// 		grid-template-columns: 1fr 1fr;
+// 		grid-template-rows: 1fr 0.4fr 1fr 1fr 1fr 0.7fr 1fr 15px 1fr;
+// 		padding: 15px;
+// 	}
+// }
+// .footer__buttons{
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	justify-content: space-between;
+// 	grid-column: 2/5;
+// 	grid-row: 1/2;
+// 	 @media screen and (max-width:767px){
+// 		grid-column: 1/3;
+// 		grid-row: 3/5;
+// 	}
+// }
+// #logo{
+	
+// 	grid-column: 1/2;
+// 	grid-row: 1/3;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 1/2;
+// 		grid-row: 1/3;
+// 	}
+// 	 @media screen and (max-width:767px){
+// 		grid-column: 1/3;
+// 		grid-row: 1/2;
+// 	}
+// }
+// // #corporative{
+// //     grid-column: 2/3;
+// //     grid-row: 1/2;
+// //     @media screen and (min-width: 768px) and (max-width:992px){
+// //         grid-column: 2/3;
+// //     grid-row: 1/2;
+// //     }
+// //      @media screen and (max-width:767px){
+// //         grid-column: 1/3;
+// //         grid-row: 3/4;
+// //     }
+// // }
+// // #private-client{
+// //     grid-column: 3/4;
+// //     grid-row: 1/2;
+// //     @media screen and (min-width: 768px) and (max-width:992px){
+// //         grid-column: 3/4;
+// //         grid-row: 1/2;
+// //     }
+// //      @media screen and (max-width:767px){
+// //         grid-column: 1/2;
+// //         grid-row: 4/5;
+// //     }
+// // }
+// // #private-banking{
+// //     grid-column: 4/5;
+// //     grid-row: 1/2;
+// //     @media screen and (min-width: 768px) and (max-width:992px){
+// //         grid-column: 4/5;
+// //         grid-row: 1/2;
+// //     }
+// //      @media screen and (max-width:767px){
+// //         grid-column: 2/3;
+// //         grid-row: 4/5;
+// //     }
+// // }
+// #general-office{
+// 	grid-column: 2/3;
+// 	grid-row: 2/3;
+// 	@media screen  and (max-width:992px){
+// 		grid-column: 2/3;
+// 		grid-row: 2/3;
+// 	}
+// 	@media screen and (max-width: 767px){
+// 		grid-column: 1/2;
+// 		grid-row: 5/6;
+// 	}
+// }
+// #fax{
+// 	grid-column: 3/4;
+// 	grid-row: 2/3;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 3/4;
+// 		grid-row: 2/3;
+// 	}
+// 	 @media screen and (max-width:767px){
+// 		grid-column: 1/2;
+// 		grid-row:6/8;
+// 	}
+// }
+// #email{
+// 	grid-column: 4/5;
+// 	grid-row: 2/3;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 4/5;
+// 		grid-row: 2/3;
+// 	}
+// 	@media screen and (max-width:767px){
+// 		grid-column: 2/3;
+// 		grid-row: 5/6;
+// 	}
+// }
+// #online{
+// 	grid-column: 5/6;
+// 	grid-row: 1/2;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 2/3;
+// 		grid-row: 3/4;
+// 		align-self: flex-end;
+// 	}
+// 	 @media screen and (max-width:767px){
+// 		grid-column: 2/3;
+// 		grid-row: 6/8;
+// 		align-self: center;
+// 	}
+// }
+// #navigate{
+// 	grid-column: 5/6;
+// 	grid-row: 2/3;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 3/4;
+// 		grid-row: 3/5;
+// 		align-self:center;
+// 	}
+// 	 @media screen and (max-width:767px){
+// 		grid-column: 1/3;
+// 		grid-row: 2/3;
+// 	}
+// }
+// .border{
+// 	grid-column: 2/6 ;
+// 	grid-row: 3/4;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 2/5;
+// 		grid-row: 5/6;
+// 	}
+// 	   @media screen and (max-width:767px){
+// 		grid-column: 1/3;
+// 		grid-row: 8/9;
+// 	}
+// }
+// #copyright{
+// 	grid-column: 2/5;
+// 	grid-row: 4/5;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 2/5;
+// 		grid-row: 6/7;
+// 	}
+// 	   @media screen and (max-width:767px){
+// 		grid-column: 1/3;
+// 		grid-row: 9/10;
+// 	}
+// }
+// #social{
+// 	grid-column: 5/6;
+// 	grid-row: 4/5;
+// 	@media screen and (min-width: 768px) and (max-width:992px){
+// 		grid-column: 2/3;
+// 		grid-row: 4/5;
+// 	}
+// 	   @media screen and (max-width:767px){
+// 		grid-column: 2/3;
+// 		grid-row: 7/8;
+// 	}
+// }
+// .footer-picture{
+// 	width:152px; 
+// 	height:62px;
+// 	@media screen and (max-width: 992px) {
+// 		width: 94px;
+// 		height:38px
+// 	}
+// }
+// .logo-footer{
+// 	@media screen and (max-width: 767px) {
+// 		display: flex;
+// 		margin-top:0px;
+// 	&>img{
+// 		height: 40px;
+// 		width: auto;
+// 		margin-right: 10px;
+// 	}   
+// 	} 
+// }
+
+// .contacts-footer-item {
+// 	width: max-content;
+// 	list-style: none;
+// 	@media screen and (max-width:767px) {
+// 	display: block;
+// 	width: max-content; 
+// 	margin-right: 0px;
+// 	}
+// }
+
+// .contacts-footer-link {
+// 	display: block;
+// 	padding: 17px;
+// 	text-transform: uppercase;
+// 	font-family: 'Helvetica';
+// 	font-style: normal;
+// 	font-weight: 700;
+// 	font-size: 13px;
+// 	line-height: 15px;
+// 	color: #ffffff;
+// 	text-decoration: none;
+// 	background: rgba(255, 255, 255, 0.2);
+// 	border: 1px solid #00D2FF;
+// 	box-shadow: 0px 4px 4px rgba(63, 156, 148, 0.17);
+// 	border-radius: 2px;
+// 	@media screen and (max-width: 992px) {
+// 		font-size: 12px;
+// 		line-height: 14px;
+// 	}
+// }
+
+// .contacts-footer-heading{
+// 	font-family: 'Helvetica';
+// 	font-style: normal;
+// 	font-weight: 700;
+// 	font-size: 16px;
+// 	line-height: 18px;
+// 	color: #FFFFFF;
+// 	@media screen and (max-width: 767px) {
+// 		font-size: 14px;
+// 		line-height: 16px;
+// 	}
+// }
+// .contacts-footer-text{
+// 	font-family: 'Helvetica';
+// 	font-style: normal;
+// 	font-weight: 500;
+// 	font-size: 16px;    
+// 	line-height: 18px;  
+// 	color: #FFFFFF;
+// 	@media screen and (max-width:767px){
+// 		font-size: 14px;
+// 		line-height: 16px;
+// 	}
+// }   
+// .nav-footer-link {
+// 	text-transform: uppercase;
+// 	color: #2BC5FF;
+// 	text-decoration: none;
+// 	font-family: 'Helvetica';
+// 	font-style: normal;
+// 	font-weight: 700;
+// 	font-size: 16px;
+// 	line-height: 18px;
+// }
+// .nav-list{
+// 	@media screen and (max-width: 767px) {
+// 		display: flex;
+// 		flex-direction: row;
+// 	}
+	
+// }
+// .nav-item:not(:last-child){
+// 	margin-bottom: 8px;
+// 	@media screen and (max-width: 767px) {
+// 		margin-right: 20px;
+// 	}
+
+// }
+// .nav-link{
+// 	font-family: 'Helvetica';
+// 	font-style: normal;
+// 	font-weight: 400;
+// 	font-size: 16px;
+// 	line-height: 18px;
+// 	color: #FFFFFF;
+// }
+// .copyright{
+// 	font-family: 'Helvetica';
+// 	font-style: normal;
+// 	font-weight: 400;
+// 	font-size: 14px;
+// 	line-height: 16px;
+// 	color: #FFFFFF;
+// }
+// .social__links-list {
+// 	display: flex;
+// 	justify-content: space-between;
+// 	align-items: center;
+// 	width:143px ;
+// }
+// .social__picture{
+// 	width:32px;
+// 	height:32px;
+// 	fill: #ffffff;
+// }
+// .border-gradient-block {
+//   border-bottom: 1px solid;
+//   border-image-slice: 1;
+//   border-width: 1px;
+// }
+// .border-gradient-color-block {
+// 	border-image-source: linear-gradient(90deg, #FFFFFF -61.32%, rgba(0, 0, 0, 0) 199.06%);
+// }
 .footer {
-   width: 100%;
-   background: linear-gradient(274.25deg, #00205B -9.03%, #00A3E0 138.82%);
-}
-.footer__container{
-    display: grid;
-    padding-top: 30px;
-    align-items: center;
-    grid-template-columns: 1fr 1fr 0.8fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 15px 1fr;
-    column-gap: 2%;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-template-columns: 1fr 1fr 0.8fr 1fr;
-        grid-template-rows: 1fr 1fr 0.7fr 1fr 15px  1fr;
-    }
-    @media screen and (max-width: 767px) {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 0.4fr 1fr 1fr 1fr 0.7fr 1fr 15px 1fr;
-        padding: 15px;
-    }
-}
-#logo{
-    grid-column: 1/2;
-    grid-row: 1/3;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 1/2;
-        grid-row: 1/3;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-}
-#corporative{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 2/3;
-    grid-row: 1/2;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-}
-#private-client{
-    grid-column: 3/4;
-    grid-row: 1/2;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 3/4;
-        grid-row: 1/2;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 1/2;
-        grid-row: 4/5;
-    }
-}
-#private-banking{
-    grid-column: 4/5;
-    grid-row: 1/2;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 4/5;
-        grid-row: 1/2;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 2/3;
-        grid-row: 4/5;
-    }
-}
-#general-office{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    @media screen  and (max-width:992px){
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
-    @media screen and (max-width: 767px){
-        grid-column: 1/2;
-        grid-row: 5/6;
-    }
-}
-#fax{
-    grid-column: 3/4;
-    grid-row: 2/3;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 3/4;
-        grid-row: 2/3;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 1/2;
-        grid-row:6/8;
-    }
-}
-#email{
-    grid-column: 4/5;
-    grid-row: 2/3;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 4/5;
-        grid-row: 2/3;
-    }
-    @media screen and (max-width:767px){
-        grid-column: 2/3;
-        grid-row: 5/6;
-    }
-}
-#online{
-    grid-column: 5/6;
-    grid-row: 1/2;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 2/3;
-        grid-row: 3/4;
-        align-self: flex-end;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 2/3;
-        grid-row: 6/8;
-        align-self: center;
-    }
-}
-#navigate{
-    grid-column: 5/6;
-    grid-row: 2/3;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 3/4;
-        grid-row: 3/5;
-        align-self:center;
-    }
-     @media screen and (max-width:767px){
-        grid-column: 1/3;
-        grid-row: 2/3;
-    }
-}
-.border{
-    grid-column: 2/6 ;
-    grid-row: 3/4;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 2/5;
-        grid-row: 5/6;
-    }
-       @media screen and (max-width:767px){
-        grid-column: 1/3;
-        grid-row: 8/9;
-    }
-}
-#copyright{
-    grid-column: 2/5;
-    grid-row: 4/5;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 2/5;
-        grid-row: 6/7;
-    }
-       @media screen and (max-width:767px){
-        grid-column: 1/3;
-        grid-row: 9/10;
-    }
-}
-#social{
-    grid-column: 5/6;
-    grid-row: 4/5;
-    @media screen and (min-width: 768px) and (max-width:992px){
-        grid-column: 2/3;
-        grid-row: 4/5;
-    }
-       @media screen and (max-width:767px){
-        grid-column: 2/3;
-        grid-row: 7/8;
-    }
-}
-.footer-picture{
-    width:152px; 
-    height:62px;
-    @media screen and (max-width: 992px) {
-        width: 94px;
-        height:38px
-    }
-}
-.logo-footer{
-    @media screen and (max-width: 767px) {
-        display: flex;
-        margin-top:0px;
-    &>img{
-        height: 40px;
-        width: auto;
-        margin-right: 10px;
-    }   
-    } 
-}
-
-.contacts-footer-item {
-    width: max-content;
-    list-style: none;
-    @media screen and (max-width:767px) {
-    display: block;
-    width: max-content; 
-    margin-right: 0px;
-    }
-}
-
-.contacts-footer-link {
-    display: block;
-    padding: 17px;
-    text-transform: uppercase;
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 13px;
-    line-height: 15px;
-    color: #ffffff;
-    text-decoration: none;
-    background: rgba(255, 255, 255, 0.2);
-    border: 1px solid #00D2FF;
-    box-shadow: 0px 4px 4px rgba(63, 156, 148, 0.17);
-    border-radius: 2px;
-    @media screen and (max-width: 992px) {
-        font-size: 12px;
-        line-height: 14px;
-    }
-}
-
-.contacts-footer-heading{
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 18px;
-    color: #FFFFFF;
-    @media screen and (max-width: 767px) {
-        font-size: 14px;
-        line-height: 16px;
-    }
-}
-.contacts-footer-text{
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;    
-    line-height: 18px;  
-    color: #FFFFFF;
-    @media screen and (max-width:767px){
-        font-size: 14px;
-        line-height: 16px;
-    }
-}   
-.nav-footer-link {
-    text-transform: uppercase;
-    color: #2BC5FF;
-    text-decoration: none;
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 18px;
-}
-.nav-list{
-    @media screen and (max-width: 767px) {
-        display: flex;
-        flex-direction: row;
-    }
-    
-}
-.nav-item:not(:last-child){
-    margin-bottom: 8px;
-    @media screen and (max-width: 767px) {
-        margin-right: 20px;
-    }
-
-}
-.nav-link{
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
-    color: #FFFFFF;
-}
-.copyright{
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: #FFFFFF;
-}
-.social__links-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width:143px ;
-}
-.social__picture{
-    width:32px;
-    height:32px;
-    fill: #ffffff;
-}
-.border-gradient-block {
-  border-bottom: 1px solid;
-  border-image-slice: 1;
-  border-width: 1px;
-}
-.border-gradient-color-block {
-    border-image-source: linear-gradient(90deg, #FFFFFF -61.32%, rgba(0, 0, 0, 0) 199.06%);
+	background: linear-gradient(274.25deg, #00205B -9.03%, #00A3E0 138.82%);
+	&__wrapper {
+		display: flex;
+		justify-content: space-around;
+		padding-top: 60px;
+		padding-bottom: 55px;
+		@media screen and (max-width: 768px) {
+			flex-direction: column;
+		}
+	}
+	&__logo {
+		flex: 0 0 120px;
+		&>img{
+			min-width: 0;
+			width: 100%;
+		}
+		@media screen and (max-width: 768px) {
+			display: flex;
+			flex: 0 0 auto;
+			margin-bottom: 25px;
+			&>img{
+				flex:0 0 95px;
+				height: auto;
+				margin-right: 12px;
+			}
+		}
+	}
+	&__content-wrapper {
+		display: flex;
+		flex: 0 0 calc(90% - 120px);
+		flex-direction: column;
+		--body-width: 80%;
+		@media screen and (max-width: 1200px) {
+			--body-width: 100%;
+		}
+		@media screen and (max-width: 992px) {
+			flex: 0 0 calc(95% - 120px);
+		}
+	}
+	&__content {
+		display: flex;
+		align-items: center;
+		// justify-content: space-around;
+		flex-wrap: wrap;
+		row-gap: 30px;
+		@media screen and (max-width: 1200px) {
+			flex: 0 0 200px;
+		}
+		@media screen and (max-width: 992px) {
+			justify-content: space-between;
+		}
+	}
+	&__buttons{
+		flex: 0 0 var(--body-width);
+		display: flex;
+		justify-content: space-between;
+		@media screen and (max-width: 768px) {
+			order: 1;
+			flex-wrap: wrap;
+			justify-content: start;
+		}
+	}
+	&__button-wrapper{
+		flex: 0 0 calc(100%/3);
+		display: flex;
+		justify-content: center;
+		@media screen and (max-width: 992px) {
+			flex: 0 0 auto;
+			// margin: 10px 25px;
+		}
+		@media screen and (max-width: 768px) {
+			margin: 10px;
+		}
+	}
+	&__button {
+		padding: 15px 10px;
+		background: rgba(255, 255, 255, 0.2);
+		border: 1px solid #00D2FF;
+		box-shadow: 0px 4px 4px rgba(63, 156, 148, 0.17);
+		border-radius: 2px;
+	}
+	&__featured-page {
+		color: #2BC5FF;
+		flex: 1 1 20%;
+		@media screen and (max-width: 1200px) {
+			margin-right: 15px;
+			order: 6;
+			flex: 0 0 200px;
+		}
+		@media screen and (max-width: 768px) {
+			flex: 0 0 50%;
+			margin: 0;
+		}
+		
+	}
+	&__contact-wrapper{
+		// margin-top: 35px;
+		flex: 0 0 calc(var(--body-width)/3);
+		@media screen and (max-width: 768px) {
+			order: 1;
+		}
+		@media screen and (max-width: 768px) {
+			flex: 0 0 calc(var(--body-width)/2);
+		}
+	}
+	&__contact {
+		width: 70%;
+		margin: auto;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		&>*{
+			width: 100%;
+		}
+		@media screen and (max-width: 1200px) {
+			width: 90%;
+		}
+	}
+	&__menu-wrapper{
+		flex: 1 1 20%;
+		
+		
+		@media screen and (max-width: 1200px) {
+			order: 7;
+		}
+		@media screen and (max-width: 768px) {
+			order: 0;
+			flex: 0 0 100%;
+		}
+	}
+	&__menu {
+		display: flex;
+		flex-direction: column;
+		&>*{
+			margin-bottom: 7px;
+		}
+		@media screen and (max-width: 768px) {
+			flex-direction: row;
+			justify-content: space-between;
+			max-width: 350px;
+			margin: auto;
+		}
+	}
+	&__bottom-bar {
+		margin-top: 35px;
+		padding-top: 40px;
+		position: relative;
+		&:before{
+			content: '';
+			position: absolute;
+			left: 0;
+			right: 0;
+			height: 1px;
+			top: 0;
+			background: linear-gradient(90deg, #FFFFFF -61.32%, rgba(0, 0, 0, 0) 199.06%);
+		}
+	}
 }
