--- a/src/assets/scss/base/_page-content.scss
+++ b/src/assets/scss/base/_page-content.scss
@@ -94,9 +94,14 @@
 	padding-bottom: 7px;
 }
 
-.btn {  
-	width: 210px;
-	height: 50px;
+.btn { 
+	padding: 20px 50px;
+	@media screen and (max-width: 768px) {
+		padding: 15px 10px;
+		width: 100%;
+	}
+	// width: 210px;?
+	// height: 50px;
 	font-family: 'Helvetica';
 	font-style: normal;
 	font-weight: 400;
