--- a/src/assets/scss/base/_text-styles.scss
+++ b/src/assets/scss/base/_text-styles.scss
@@ -135,6 +135,11 @@
 		}
 		
 	}
+	&--placeholder-dark{
+		&::placeholder{
+			opacity: 0.9 !important;
+		}
+	}
 
 	&--underscore{
 		background: transparent;
