--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -71,10 +71,10 @@ ul {
 }
 
 a {
-  color: inherit;
-  &:not(.def-link){
-  	text-decoration: inherit; /* no underline */
-  }
+	color: inherit;
+	&:not(.def-link){
+		text-decoration: inherit; /* no underline */
+	}
 }
 // a, a:hover, a:focus, a:active { 
 //       text-decoration: none; 
@@ -210,7 +210,7 @@ div.hidden{
 			
 		}
 		&::-webkit-scrollbar {
-		   	height: 10px;
+				height: 10px;
 		}
 
 		&::-webkit-scrollbar-track {
@@ -219,13 +219,13 @@ div.hidden{
 			background-clip: padding-box;
 			background-color: #D8D8D8;
 			border-radius: 5px;
-		    // background-color: darkgrey;
+				// background-color: darkgrey;
 		}
 
 		&::-webkit-scrollbar-thumb {
 			background: radial-gradient(circle, rgba(0,163,224,1) 0%, rgba(0,151,224,1) 50%, rgba(0,212,255,1) 100%);
 			border-radius: 5px;
-		    // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+				// box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 		}
 		
 	}
@@ -380,9 +380,46 @@ div.hidden{
 	input, select{
 		width: 100%;
 	}
-	// input:not([value=""]):not(:focus){
-	// 	position: relative;
-	// 	border: 1px solid red !important;
-	// 	color: red !important;
-	// }
+	&__input {
+		position: relative;
+		&:not(.invalid){
+			.form__input-invalid-message{
+				display: none;
+			}
+		}
+		&.invalid{
+			animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+			transform: translate3d(0, 0, 0);
+			backface-visibility: hidden;
+			perspective: 1000px;
+			
+		}
+	}
+	&__input-invalid-message {
+		color: red;
+		font-size: 10px;
+		&--top-right {
+			font-size: 1em;
+			position: absolute;
+			top: -5px;
+			right: 1px;
+		}
+	}
+}
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
