--- a/src/assets/scss/utils/margin-util-preset.scss
+++ b/src/assets/scss/utils/margin-util-preset.scss
@@ -1,16 +1,16 @@
 &{
 	//reset
 	&--l-0{
-		margin-left: 0;
+		margin-left: 0 !important;
 	}
 	&--r-0{
-		margin-right: 0;
+		margin-right: 0 !important;
 	}
 	&--b-0{
-		margin-bottom: 0;
+		margin-bottom: 0 !important;
 	}
 	&--t-0{
-		margin-top: 0;
+		margin-top: 0 !important;
 	}
 
 	&--5{
