--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -117,6 +117,25 @@ div.hidden{
 }
 
 .def-text-wrapper{
+	margin-bottom: 45px;
+	&>img{
+		width: 33%;
+	    float: right;
+	    border-radius: 5px;
+	    margin: 15px;
+	}
+	a{
+		text-decoration: underline !important;
+		color: #0000EE !important;
+		cursor: pointer;
+	}
+	h1{
+		font-weight: 700;
+		@include fSize(992, 440, 36, 28);
+		line-height: 1.1em;
+		color: #003772;
+		text-transform: none;
+	}
 	h2{
 		font-weight: 700;
 		@include fSize(992, 440, 36, 28);
@@ -171,6 +190,10 @@ div.hidden{
 	table{
 		border-collapse: collapse;
 		width: 100%;
+		max-height: 80vh;
+		@media screen and (max-width: 992px) {
+			max-height: 60vh;
+		}
 		text-align: center;
 		display: block;
 		overflow-x: auto;
@@ -182,11 +205,13 @@ div.hidden{
 				font-weight: 700;
 				font-size: 20px;
 				line-height: 23px;
+				text-align: center;
 
 				color: #4E4E4E;
 			}
 		}
 		tbody{
+			text-align: left;
 			
 			tr{
 				&>td{
@@ -211,11 +236,14 @@ div.hidden{
 		}
 		&::-webkit-scrollbar {
 				height: 10px;
+				width: 10px;
 		}
 
 		&::-webkit-scrollbar-track {
 			border-top: 4px solid transparent;
 			border-bottom: 4px solid transparent;
+			border-right: 4px solid transparent;
+			border-left: 4px solid transparent;
 			background-clip: padding-box;
 			background-color: #D8D8D8;
 			border-radius: 5px;
@@ -223,8 +251,9 @@ div.hidden{
 		}
 
 		&::-webkit-scrollbar-thumb {
-			background: radial-gradient(circle, rgba(0,163,224,1) 0%, rgba(0,151,224,1) 50%, rgba(0,212,255,1) 100%);
-			border-radius: 5px;
+			// background: radial-gradient(circle, rgba(0,163,224,1) 0%, rgba(0,151,224,1) 50%, rgba(0,212,255,1) 100%);
+			background: #aaa;
+			border-radius: 2px;
 				// box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 		}
 		
@@ -422,4 +451,26 @@ div.hidden{
   40%, 60% {
     transform: translate3d(4px, 0, 0);
   }
+}
+.search {
+
+	margin-bottom: 15px;
+	&__text {
+		margin-bottom:7px;
+	}
+	&__row{
+		display: flex;
+		align-items: center;
+	}
+	&__search-icon {
+		display: inline-flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		img{
+			height: 1em;
+			width: auto;
+		}
+		margin-left: 15px;
+	}
 }
